tests/baselines/reference/decoratorOnEnum2.errors.txt
decoratorOnEnum2.ts(4,5): error TS1132: Enum member expected.
decoratorOnEnum2.ts(4,9): error TS1146: Declaration expected.
decoratorOnEnum2.ts(4,10): error TS2304: Cannot find name 'A'.
decoratorOnEnum2.ts(5,1): error TS1128: Declaration or statement expected.


==== decoratorOnEnum2.ts (4 errors) ====
    declare function dec<T>(target: T): T;
    
    enum E {
        @dec A
        ~
!!! error TS1132: Enum member expected.
            
!!! error TS1146: Declaration expected.
             ~
!!! error TS2304: Cannot find name 'A'.
    }
    ~
!!! error TS1128: Declaration or statement expected.